fix: user routes
- fixed login and sign up routes to return userIds
- hash password on update
